# mini-shop-server

./: .env  .gitignore  LICENSE  Pipfile  README.md  REAMDME.md  UPGRADE_GUIDE.md  code.md  config.ini  fake.py  pyproject.toml  readme.md  requirements.txt  server.py  shema.py  zerd.sql
app/: __init__.py  app.py
app/api/: __init__.py
app/api_docs/: __init__.py  address.py  banner.py  base.py  category.py  client.py  file.py  global_args.py  order.py  pay.py  product.py  theme.py  token.py  user.py
app/apidocs/: __init__.py  address.py  banner.py  file.py  order.py  product.py  theme.py  token.py  user.py
app/config/: dev.py  secure.py  setting.py  wx.py
app/core/: auth.py  db.py  error.py  file.py  json_encoder.py  logger.py  redprint.py  swagger_filed.py  token_auth.py  utils.py  validator.py
app/dao/: address.py  admin.py  article.py  auth.py  banner.py  config.py  element.py  file.py  group.py  identity.py  log.py  login_log.py  menu.py  notice.py  oper_log.py  order.py  product.py  route.py  theme.py  token.py  user.py
app/doc/: __init__.py
app/libs/: blueprint.py  core.py  enums.py  error.py  error_code.py  httper.py  limiter.py  model_view.py  param_filed.py  redprint.py  scope.py  server.py  success_code.py  success_message.py  swagger_filed.py  token_auth.py  utils.py
app/model_views/: base.py  category.py  order.py  product.py  user.py
app/models/: __init__.py  address.py  article.py  auth.py  baner_item.py  banner.py  banner_item.py  base.py  book.py  category.py  config.py  dict.py  dict_type.py  element.py  element2group.py  error_log.py  file.py  gift.py  group.py  identity.py  image.py  log.py  login_log.py  m2m.py  menu.py  notice.py  oper_log.py  order.py  product.py  product_property.py  route.py  theme.py  user.py  user_address.py
app/service/: __init__.py  account_token.py  app_token.py  delivery_message.py  file.py  login_verify.py  open_token.py  order.py  pay.py  token.py  user_token.py  wx_message.py  wx_token.py
app/templates/: error_code.html  index.html  layout.html
test/: test.py
tests/: test_cms_auth.py  test_cms_user.py  test_v1_product.py  test_v1_token.py  test_v1_user.py  token.json  utils.py
(+125 files in other folders)
