[project]
name = "mini-shop-server"
description = "构建微信小程序(商城)后端 - 基于 Flask 框架"
authors = [{ name = "Allen7D", email = "bodanli159951@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["flask", "wechat", "restful api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Framework :: Flask",
]
dynamic = ["version"]

dependencies = [
    "flask==2.0.3",
    "PyMySQL>=1.1.0",
    "flask-sqlalchemy==2.5.1",
    "sqlalchemy==1.4.46",
    "flask-httpauth==4.7.0",
    "flask-wtf==1.1.1",
    "flask-cors==3.0.10",
    "requests==2.31.0",
    "wechatpy==1.8.18",
    "gunicorn==23.0.0",
    "email-validator==2.1.0",
    "psutil==5.9.6",
    "qiniu==7.12.1",
    "cachelib==0.10.2",
    "itsdangerous==2.0.1",
    "werkzeug==2.0.3",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "pylint==3.0.3",
    "pytest==7.4.3",
    "flasgger==0.9.5",
    "flask-admin==1.6.1",
]

[project.urls]
Homepage = "https://github.com/Allen7D/mini-shop-server"
Repository = "https://github.com/Allen7D/mini-shop-server.git"
Issues = "https://github.com/Allen7D/mini-shop-server/issues"
Documentation = "https://github.com/Allen7D/mini-shop-server#readme"

[project.scripts]
mini-shop-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pylint==3.0.3",
    "pytest==7.4.3",
    "flasgger==0.9.5",
    "flask-admin==1.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 120
